--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "deploy": "npm run build&&gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,8 @@
     "react-dom": "^15.4.1",
     "react-router": "^4.0.0-alpha.6",
     "react-scripts": "^0.8.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^0.12.0"
   }
 }
